Update project to the latest version

--- a/jupyterNotebooks/V2_Cinemática Directa - Proyecto Mecatrónico.ipynb
+++ b/jupyterNotebooks/V2_Cinemática Directa - Proyecto Mecatrónico.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 86,
    "id": "e46452c0",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 87,
    "id": "d023c0ac",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 88,
    "id": "bb92015a",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 89,
    "id": "ce159b49",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
     "A34 = SE3_extended.Rz(q4 - radians(20)) * SE3_extended.Tz(0) * SE3_extended.Tx(l4) * SE3_extended.Rx(0)\n",
     "A45 = SE3_extended.Ty(-l5) # Se traslada hacia la punta del marcador\n",
     "T = A01 * A12 * A23 * A34 * A45\n",
-    "\n",
+    "# T = T.simplify()\n",
     "\n",
     "print('A01:')\n",
     "A01.print()\n",
@@ -176,17 +176,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 90,
+   "id": "8de05be6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TNumpy = T.A\n",
+    "# TSympy = sp.Matrix(TNumpy)\n",
+    "\n",
+    "# # Simplify using trigsimp (used for trigonometric terms)\n",
+    "# TSympy = TSympy.applyfunc(sp.trigsimp)\n",
+    "\n",
+    "# # Rounding small values to zero with nsimplify and tolerance\n",
+    "# def custom_nsimplify(expr, tolerance=1e-10):\n",
+    "#     return sp.nsimplify(expr, tolerance=tolerance, rational=True)\n",
+    "\n",
+    "# TSimplified = TSympy.applyfunc(lambda x: custom_nsimplify(x, tolerance=1e-10))\n",
+    "\n",
+    "# sp.init_printing()\n",
+    "# display(TSimplified.evalf())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
    "id": "fdd616df",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Se les dan valores a las variables simbólicas:\n",
-    "A01_eval = A01.symbolReplace([(q1,radians(77.005)),(l1,14.638)])\n",
-    "A12_eval = A12.symbolReplace([(q2,radians(68.99)),(l2,12.725)])\n",
-    "A23_eval = A23.symbolReplace([(q3,radians(31.42)),(l3,10.222)])\n",
-    "A34_eval = A34.symbolReplace([(q4,radians(27.59)),(l4,11.200)])\n",
-    "A45_eval = A45.symbolReplace([(l5,7.600)])\n",
+    "A01_eval = A01.symbolReplace([(q1,radians(110)),(l1,14.638)])\n",
+    "A12_eval = A12.symbolReplace([(q2,radians(60)),(l2,12.725)])\n",
+    "A23_eval = A23.symbolReplace([(q3,radians(30)),(l3,10.222)])\n",
+    "A34_eval = A34.symbolReplace([(q4,radians(48)),(l4,11.200)])\n",
+    "A45_eval = A45.symbolReplace([(l5,8.200)])\n",
     "\n",
     "# Posición del brazo en home para la configuración actual:\n",
     "# q1: 90° (el brazo queda recto en la mitad de la pizarra)\n",
@@ -197,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 81,
    "id": "25465fb5",
    "metadata": {},
    "outputs": [
@@ -212,33 +235,33 @@
       "  \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 1       \u001b[0m  \u001b[0m\n",
       "\n",
       "S1:\n",
-      "  \u001b[38;5;1m 0.9744  \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;1m-0.2249  \u001b[0m \u001b[38;5;4m 0       \u001b[0m  \u001b[0m\n",
-      "  \u001b[38;5;1m-0.2249  \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;1m-0.9744  \u001b[0m \u001b[38;5;4m 0       \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;1m 0.9397  \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;1m 0.342   \u001b[0m \u001b[38;5;4m 0       \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;1m 0.342   \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;1m-0.9397  \u001b[0m \u001b[38;5;4m 0       \u001b[0m  \u001b[0m\n",
       "  \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;1m 1       \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;4m 14.64   \u001b[0m  \u001b[0m\n",
       "  \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 1       \u001b[0m  \u001b[0m\n",
       "\n",
       "S2:\n",
-      "  \u001b[38;5;1m 0.3493  \u001b[0m \u001b[38;5;1m-0.9096  \u001b[0m \u001b[38;5;1m-0.2249  \u001b[0m \u001b[38;5;4m 4.445   \u001b[0m  \u001b[0m\n",
-      "  \u001b[38;5;1m-0.08062 \u001b[0m \u001b[38;5;1m 0.2099  \u001b[0m \u001b[38;5;1m-0.9744  \u001b[0m \u001b[38;5;4m-1.026   \u001b[0m  \u001b[0m\n",
-      "  \u001b[38;5;1m 0.9335  \u001b[0m \u001b[38;5;1m 0.3585  \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;4m 26.52   \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;1m 0.4698  \u001b[0m \u001b[38;5;1m-0.8138  \u001b[0m \u001b[38;5;1m 0.342   \u001b[0m \u001b[38;5;4m 5.979   \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;1m 0.171   \u001b[0m \u001b[38;5;1m-0.2962  \u001b[0m \u001b[38;5;1m-0.9397  \u001b[0m \u001b[38;5;4m 2.176   \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;1m 0.866   \u001b[0m \u001b[38;5;1m 0.5     \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;4m 25.66   \u001b[0m  \u001b[0m\n",
       "  \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 1       \u001b[0m  \u001b[0m\n",
       "\n",
       "S3:\n",
-      "  \u001b[38;5;1m 0.9288  \u001b[0m \u001b[38;5;1m 0.2945  \u001b[0m \u001b[38;5;1m-0.2249  \u001b[0m \u001b[38;5;4m 13.94   \u001b[0m  \u001b[0m\n",
-      "  \u001b[38;5;1m-0.2144  \u001b[0m \u001b[38;5;1m-0.06796 \u001b[0m \u001b[38;5;1m-0.9744  \u001b[0m \u001b[38;5;4m-3.217   \u001b[0m  \u001b[0m\n",
-      "  \u001b[38;5;1m-0.3022  \u001b[0m \u001b[38;5;1m 0.9532  \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;4m 23.43   \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;1m 0.8297  \u001b[0m \u001b[38;5;1m 0.4412  \u001b[0m \u001b[38;5;1m 0.342   \u001b[0m \u001b[38;5;4m 14.46   \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;1m 0.302   \u001b[0m \u001b[38;5;1m 0.1606  \u001b[0m \u001b[38;5;1m-0.9397  \u001b[0m \u001b[38;5;4m 5.263   \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;1m-0.4695  \u001b[0m \u001b[38;5;1m 0.8829  \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;4m 20.86   \u001b[0m  \u001b[0m\n",
       "  \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 1       \u001b[0m  \u001b[0m\n",
       "\n",
       "S4:\n",
-      "  \u001b[38;5;1m 0.9596  \u001b[0m \u001b[38;5;1m 0.1692  \u001b[0m \u001b[38;5;1m-0.2249  \u001b[0m \u001b[38;5;4m 24.69   \u001b[0m  \u001b[0m\n",
-      "  \u001b[38;5;1m-0.2214  \u001b[0m \u001b[38;5;1m-0.03905 \u001b[0m \u001b[38;5;1m-0.9744  \u001b[0m \u001b[38;5;4m-5.697   \u001b[0m  \u001b[0m\n",
-      "  \u001b[38;5;1m-0.1736  \u001b[0m \u001b[38;5;1m 0.9848  \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;4m 21.48   \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;1m 0.9397  \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;1m 0.342   \u001b[0m \u001b[38;5;4m 24.98   \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;1m 0.342   \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;1m-0.9397  \u001b[0m \u001b[38;5;4m 9.094   \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;1m 1       \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;4m 20.86   \u001b[0m  \u001b[0m\n",
       "  \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 1       \u001b[0m  \u001b[0m\n",
       "\n",
       "S5:\n",
-      "  \u001b[38;5;1m 0.9596  \u001b[0m \u001b[38;5;1m 0.1692  \u001b[0m \u001b[38;5;1m-0.2249  \u001b[0m \u001b[38;5;4m 23.4    \u001b[0m  \u001b[0m\n",
-      "  \u001b[38;5;1m-0.2214  \u001b[0m \u001b[38;5;1m-0.03905 \u001b[0m \u001b[38;5;1m-0.9744  \u001b[0m \u001b[38;5;4m-5.4     \u001b[0m  \u001b[0m\n",
-      "  \u001b[38;5;1m-0.1736  \u001b[0m \u001b[38;5;1m 0.9848  \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;4m 14      \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;1m 0.9397  \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;1m 0.342   \u001b[0m \u001b[38;5;4m 24.98   \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;1m 0.342   \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;1m-0.9397  \u001b[0m \u001b[38;5;4m 9.094   \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;1m 1       \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;4m 12.66   \u001b[0m  \u001b[0m\n",
       "  \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 1       \u001b[0m  \u001b[0m\n",
       "\n"
      ]
@@ -273,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 82,
    "id": "c63a4da1",
    "metadata": {
     "scrolled": false
@@ -285,7 +308,7 @@
        "<Axes3D: xlabel='X', ylabel='Y', zlabel='Z'>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 83,
    "id": "07768c94",
    "metadata": {},
    "outputs": [
@@ -314,9 +337,9 @@
      "output_type": "stream",
      "text": [
       "Matriz de transformación homogénea de {S5} respecto del sistema {S0}:\n",
-      "  \u001b[38;5;1m 0.9596  \u001b[0m \u001b[38;5;1m 0.1692  \u001b[0m \u001b[38;5;1m-0.2249  \u001b[0m \u001b[38;5;4m 23.4    \u001b[0m  \u001b[0m\n",
-      "  \u001b[38;5;1m-0.2214  \u001b[0m \u001b[38;5;1m-0.03905 \u001b[0m \u001b[38;5;1m-0.9744  \u001b[0m \u001b[38;5;4m-5.4     \u001b[0m  \u001b[0m\n",
-      "  \u001b[38;5;1m-0.1736  \u001b[0m \u001b[38;5;1m 0.9848  \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;4m 14      \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;1m 0.9397  \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;1m 0.342   \u001b[0m \u001b[38;5;4m 24.98   \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;1m 0.342   \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;1m-0.9397  \u001b[0m \u001b[38;5;4m 9.094   \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;1m 1       \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;4m 12.66   \u001b[0m  \u001b[0m\n",
       "  \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 1       \u001b[0m  \u001b[0m\n",
       "\n"
      ]
@@ -330,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 84,
    "id": "115825c6",
    "metadata": {},
    "outputs": [
@@ -339,14 +362,14 @@
      "output_type": "stream",
      "text": [
       "Posición del efector final respecto de la terna base:\n",
-      "- Px = 23.4\n",
-      "- Py = -5.4\n",
-      "- Pz = 14.0\n"
+      "- Px = 24.98\n",
+      "- Py = 9.09\n",
+      "- Pz = 12.66\n"
      ]
     }
    ],
    "source": [
-    "# De la MTH T obtengo el vector de posición p que va desde la base {S0} hasta la punta del marcador marcador {S4}:\n",
+    "# De la MTH T obtengo el vector de posición p que va desde la base {S0} hasta la punta del marcador marcador {S5}:\n",
     "# Considerando que se logrará posicionar el gripper con las tres primeras variables articulares (q1,q2 y q3)\n",
     "\n",
     "p = T.A[:3,3]\n",
@@ -363,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 85,
    "id": "247c79a4",
    "metadata": {},
    "outputs": [
@@ -373,8 +396,8 @@
      "text": [
       "Ángulos de Euler en grados (respecto a los vectores de la terna base) para orientar al efector final:\n",
       "Ángulo respecto X0: 90.0°\n",
-      "Ángulo respecto Y0 (ángulo de interés): 10.0°\n",
-      "Ángulo respecto Z0: -13.0°\n"
+      "Ángulo respecto Y0 (ángulo de interés): 0.0°\n",
+      "Ángulo respecto Z0: 20.0°\n"
      ]
     }
    ],
@@ -418,38 +441,6 @@
     "print(f'Ángulo respecto Y0 (ángulo de interés): {round(euler_angle_y,2)}°') # Es la única orientación que podemos controlar con nuestro brazo robótico\n",
     "print(f'Ángulo respecto Z0: {round(euler_angle_z,2)}°')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "993db360",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f62e4da",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3edd4bda",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ebc2eeb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
