--- a/jupyterNotebooks/inverse_kinematics_dnb_robot.ipynb
+++ b/jupyterNotebooks/inverse_kinematics_dnb_robot.ipynb
@@ -11,11 +11,11 @@
     "\n",
     "def inverse_kinematics(px, py, pz, pitchAngle, scaleFactor): # El pitchAngle recibido está en radianes\n",
     "    # Variables relacionadas a cada una de las longitudes intervinientes en los cálculos (todo en centímetros)\n",
-    "    l1 = 10.3/scaleFactor\n",
-    "    l2 = 16.525/scaleFactor\n",
-    "    l3 = 15.645/scaleFactor\n",
-    "    l4 = 8.8/scaleFactor\n",
-    "    l5 = 7.4/scaleFactor\n",
+    "    l1 = 14.638/scaleFactor\n",
+    "    l2 = 12.725/scaleFactor\n",
+    "    l3 = 10.222/scaleFactor\n",
+    "    l4 = 11.200/scaleFactor\n",
+    "    l5 = 8.200/scaleFactor\n",
     "\n",
     "    try:\n",
     "        r = sqrt((px**2) + ((-py)**2))\n",
@@ -60,9 +60,10 @@
     "\n",
     "        # Expresiones para las variables articulares q2, q3 y q4\n",
     "        q2 = theta2\n",
-    "        q3 = (pi/2 + radians(62)) - (pi - theta3_sol1) # El pi/2 + radians(62) corresponde a la nueva posición de 0° del servomotor en relación a los 0° originales según el dibujo\n",
+    "        q3 = (pi/2 + radians(28)) - (pi - theta3_sol1) # El pi/2 + radians(62) corresponde a la nueva posición de 0° del servomotor en relación a los 0° originales según el dibujo\n",
     "        q4 = theta4 + (-pitchAngle) # Se le cambia el signo al ángulo pitch porque Y0 se analizó desde atrás\n",
-    "\n",
+    "        q4 = q4 + radians(20)\n",
+    "        \n",
     "        # Se pasa de radianes a grados\n",
     "        q1 = round(degrees(q1),2)\n",
     "        q2 = round(degrees(q2),2)\n",
@@ -92,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
